--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,8 +1,8 @@
 /* HEADER STYLES // ESTILO DE LA CABEZA DE PAGINA */
 
-.header{
+.header {
     height: 10.0rem; /* 65 pixeles */
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.1)
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
 }
 
 .wrap {
@@ -11,19 +11,47 @@
     max-width: 1450px;
     margin: 0 auto;
 
-    .logo{
+    .logo {
         width: 10.0rem;
         position: absolute;
         top: 50%;
-        left: 10px; 
+        left: 20px; 
         -webkit-transform: translateY(-50%);
         -moz-transform: translateY(-50%);
         transform: translateY(-50%);
 
-        img{
+        img {
             display: block;
             width: 100%;
             margin: 0;
+        }
+
+    }
+
+    .callToActions {
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        transform: translateY(-50%);
+
+        ul, li {
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            list-style-type: none;
+
+            a {
+                font-size: 1.8rem;
+                line-height: 1;
+                color: black;
+                text-decoration: none;
+                text-transform: uppercase;
+            }
+            
         }
     }
 }
