--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -50,12 +50,13 @@
                 margin-right: 0;
             }
 
-            a {
+            a, span {
                 font-size: 1.8rem;
                 line-height: 1;
                 color: black;
                 text-decoration: none;
                 text-transform: uppercase;
+                cursor: pointer;
             }
             
         }
